# ffreis-workflows-python

./: .gitignore  AGENTS.md  Makefile  README.md  lefthook.yml  sonar-project.properties
.github/workflows/: ci.yml  devops-automation.yml  devops-pr-hygiene.yml  devops-pr-labeler.yml  devops-security.yml  python-bench.yml  python-build.yml  python-container.yml  python-coverage.yml  python-docs.yml  python-fmt.yml  python-hypothesis.yml  python-lint.yml  python-lock-sync.yml  python-mutation.yml  python-security.yml  python-semgrep.yml  python-sonar.yml  python-test.yml  self-test.yml
examples/hello/: Containerfile  mkdocs.yml  pyproject.toml  sonar-project.properties
examples/hello/benchmarks/: test_bench_greeter.py
examples/hello/docs/: index.md
examples/hello/src/hello/: __init__.py  __main__.py  cli.py  greeter.py
examples/hello/tests/hypothesis_tests/: conftest.py  test_greeter_hypothesis.py
examples/hello/tests/unit_tests/: test_cli.py  test_greeter.py
scripts/: bootstrap_lefthook.sh
scripts/hooks/: check_binary_files.sh  check_large_files.sh
