[project]
name = "hello"
version = "0.1.0"
description = "Hello world example for platform workflow self-testing"
readme = "docs/index.md"
requires-python = ">=3.10"

[project.scripts]
hello = "hello.cli:main"

[project.optional-dependencies]
dev = [
    "mypy>=1.8",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "pytest-benchmark>=4.0",
    "ruff>=0.4",
    "pip-audit>=2.7",
    "mutmut>=2.0",
]
docs = [
    "mkdocs-material>=9.0",
]

[tool.ruff]
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
strict = true
python_version = "3.13"

[tool.pytest.ini_options]
testpaths = ["tests/unit_tests"]

[tool.coverage.run]
source = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hello"]
